# requiem

./: .gitignore  CHANGELOG  README.md  pyproject.toml  requirements.txt  setup.py
Requiem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app/: __init__.py  __main__.py  notes.txt
app/core/: bot.py  config.py  constants.py  help.py  models.py
app/plugins/: bot_management.py  dev_tools.py  guild_config.py  politics_and_war.py  utility.py  verins_lunchbox.py
app/plugins/guild_personalization/: __init__.py  announcers.py  guild_config.py
app/plugins/politics_and_war/: __init__.py  backend.py  errors.py  politics_and_war.py  public.py  scripts.py  utils.py
app/utils/: menus.py  paginator.py
requiem/: __init__.py  __main__.py
requiem/cogs/requiem_basic/: __init__.py  management.py  utilities.py
requiem/core/: app.py  bot.py  client.py  config.py  constants.py  context.py  database.py  db.py  errors.py  help.py  menus.py  models.py  responses.py  setup.py
requiem/core/resources/: errors.py
requiem/extensions/: __init__.py  owner.py
requiem/extensions/developer/: __init__.py
requiem/extensions/management/: __init__.py  commands.py
requiem/extensions/politics_and_war/: __init__.py  background.py  commands.py  helpers.py  queries.py  utils.py
requiem/exts/: __init__.py  requiem_basic.py
requiem/lib/: client.py  models.py  setup.py  tasks.py  utils.py
requiem/lib/utils/: extra.py
requiem/management/: __init__.py  commands.py
requiem/plugins/: customization.py  developer.py  owner.py  utility.py  verins_lunchbox.py
(+11 files in other folders)
